--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^2.1.3",
     "@types/node": "20.11.17",
     "@types/react": "18.2.52",
     "@types/react-dom": "18.2.17",
-    "@eslint/eslintrc": "^2.1.3",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.21",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "8.4.35",
-    "tailwindcss": "3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.3.3"
   }
 }
